--- a/src/main/resources/templates/bio.html
+++ b/src/main/resources/templates/bio.html
@@ -8,7 +8,7 @@
     <meta property="og:image" content="./img/bio-3-C9239852-EAE4-440A-938E-E71B77F4B98B.png">
     <link rel="shortcut icon" type="image/png" href="./img/logod.png" />
     <meta name="og:type" content="website" />
-    <meta name="twitter:card" content="photo" />
+    <meta property="og:url" content="https://www.nalssam.com" />
     <link rel="stylesheet" type="text/css" href="css/bio.css" />
     <title>NALSSAM</title>
     <style>
@@ -28,7 +28,7 @@
         font-family: "AppleSDGothicNeo-Light";
         font-style: normal;
         font-weight: 1 1000;
-        src: url("./fonts/AppleSDGothicNeo-Light.otf") format("truetype");
+        src: url("./fonts/AppleSDGothicNeo-Light.otf") format("opentype");
       }
       @font-face {
         font-family: "AppleSDGothicNeo-SemiBold";
@@ -40,7 +40,7 @@
         font-family: "AppleSDGothicNeo-Heavy";
         font-style: normal;
         font-weight: 1 1000;
-        src: url("./fonts/AppleSDGothicNeo-Heavy.otf") format("truetype");
+        src: url("./fonts/AppleSDGothicNeo-Heavy.otf") format("opentype");
       }
       @font-face {
         font-family: "AppleSDGothicNeo-Regular";
@@ -58,14 +58,15 @@
         font-family: "AppleSDGothicNeo-UltraLight";
         font-style: normal;
         font-weight: 1 1000;
-        src: url("./fonts/AppleSDGothicNeo-UltraLight.otf") format("truetype");
+        src: url("./fonts/AppleSDGothicNeo-UltraLight.otf") format("opentype");
       }
       @font-face {
         font-family: "AppleSDGothicNeo-Medium";
         font-style: normal;
         font-weight: 1 1000;
-        src: url("./fonts/AppleSDGothicNeo-Medium.otf") format("truetype");
+        src: url("./fonts/AppleSDGothicNeo-Medium.otf") format("opentype");
       }
+
       .component-wrapper a,
       .screen a {
         text-decoration: none;
@@ -237,60 +238,49 @@
     <input type="hidden" id="anPageName" name="page" value="bio" />
     <div class="container-center-horizontal">
       <div class="bio screen">
-        <div class="view-C61RwL">
-          <div class="navbar-UOcbxe">
-            <div class="hr-dIx87p"></div>
-            <a
-              href="https://docs.google.com/forms/d/e/1FAIpQLSeN4yuI6fxrqY3A1CYe7Y0yIaWwMlv7qVp9dXZnjb4Y6zYgxg/viewform?usp=sf_link"
-              target="_blank"
-            >
-              <div class="button-dIx87p"><div class="textlabel-63crYe ji1style">지원하기</div></div></a
-            >
+        <div class="group-4-C61RwL">
+          <div class="group-3-KOsP6k">
+            <div class="top-word-2jslx4">
+              <div class="nalssam-b-nFxIs7 sdsemi24">실험에서 창업으로, NALSSAM BIO분야</div>
+              <div class="textlabel-nFxIs7 thebig">공학과 생명이 만나니<br />구상이 현실이 된다.</div>
+            </div>
           </div>
-          <a href="mainpage.html"><div class="nalssam-UOcbxe nalssamlogo">NALSSAM</div></a>
-        </div>
-        <div class="g-slave-C61RwL littleabout">G-slave 지원</div>
-        <img class="x2-C61RwL" src="img/bm-ub77cuc778-2-uc544ub798-8DF41F25-AA87-4831-B23D-3E316715B340.png" />
-        <div class="top-word-C61RwL">
-          <div class="x-RyCdLg sdsemi24">실험에서 끝나는 것이 아닌 동아리, NALSSAM BIO분야</div>
-          <div class="textlabel-RyCdLg thebig">공학과 생명이 만나니<br />구상이 현실이 된다.</div>
           <a
             href="https://docs.google.com/forms/d/e/1FAIpQLSeN4yuI6fxrqY3A1CYe7Y0yIaWwMlv7qVp9dXZnjb4Y6zYgxg/viewform?usp=sf_link"
             target="_blank"
           >
-            <div class="button-RyCdLg"><div class="textlabel-3pqNxu ji1style">지원하기</div></div></a
+            <div class="button-KOsP6k"><div class="textlabel-m8aA7s newstyle">지원하기</div></div></a
           >
         </div>
-        <div class="bio-C61RwL sizes">
-          날샘 BIO 팀에서는 각종 생명 및 환경 에너지 분야의 프로젝트들을 진행하며, <br />동아리 소유 토지와
-          그린하우스(Greenhouse)를 활용하여 자율적인 활동을 진행한다. <br />400만원 이상의 예산을 활용하여 실험과 각종
-          대회를 참가하며 자유로운 분위기 속 자신이 원하는 활동을 추진할 수 있다.
+        <div class="bio-C61RwL newnew">
+          날샘 BIO팀은 동아리 소유토지와 그린하우스, 400만원 이상의 지원금으로 실험과 각종 대회에 참가한다.
         </div>
-        <div class="x2-VMr6Om"></div>
+        <div class="x2-C61RwL"></div>
         <div class="group-2-C61RwL">
           <div class="textlabel-zUixHA thebig">본인에게 맞는 세부 역량을 찾아보세요.</div>
-          <img class="line-5-zUixHA" src="img/sw-line-5-DEEA97EA-7F88-4BB3-BB5C-B00E43150B73.png" />
-          <img class="line-5-sdxwGy" src="img/sw-line-5-DEEA97EA-7F88-4BB3-BB5C-B00E43150B73.png" />
-          <img class="line-5-kTiyrb" src="img/sw-line-5-DEEA97EA-7F88-4BB3-BB5C-B00E43150B73.png" />
+          <img class="line-5-zUixHA" src="img/hw-line-5-163EB952-B348-4685-B876-2175AD5EFA36.png" />
+          <img class="line-5-sdxwGy" src="img/hw-line-5-163EB952-B348-4685-B876-2175AD5EFA36.png" />
+          <img class="line-5-kTiyrb" src="img/hw-line-5-163EB952-B348-4685-B876-2175AD5EFA36.png" />
           <div class="textlabel-sdxwGy sd36">설계한 실험을 현실로 만드는 곳</div>
+          <div class="copy-zUixHA sd36">설계한 실험을 현실로 만드는 곳</div>
           <div class="bio-zUixHA sdmedium24">
             날샘 BIO 팀에서는 각종 생명 및 환경 에너지 분야의 프로젝트들을 진행하며, 동아리 소유 토지와
-            <br />그린하우스(Greenhouse)를 활용하여 자율적인 활동을 진행한다. 400만원 이상의 예산을 활용하여
+            <br />그린하우스(Greenhouse)를 활용하여 자율적인 활동을 진행한다. 600만원 이상의 예산을 활용하여
             <br />실험과 각종 대회를 참가하며 자유로운 분위기 속 자신이 원하는 활동을 추진할 수 있다.
           </div>
-          <div class="textlabel-kTiyrb sd36">동아리 소유 토지를 활용한 프로젝트</div>
+          <div class="textlabel-kTiyrb sd36">동아리 소유 토지를 활용한 프로젝트 with 그린 하우스</div>
           <div class="textlabel-GE0XEQ sdmedium24">
             목질계목질계 작물과 당질 및 전분계 작물을 활용한 바이오 에너지를 직접 생산하는 활동을 진행하며
             <br />생명만이 아닌 폭넓고 심도 있는 활동 진행을 하는 대신고 최우수 동아리. 다양한 활동을 넓고 자유로운
             <br />환경 속에서 나의 실험 나의 방향대로 가져갈 수 있는 곳.
           </div>
-          <div class="textlabel-ZTOnhR sd36">다양성을 어필하는 것</div>
+          <div class="textlabel-ZTOnhR sd36">타분야와 연계</div>
           <div class="textlabel-FuxmSR sdmedium24">
-            캡칭플랜츠와 스마트 화분과 같은 생명 및 공학분야의 융합이 이루어져 구상한 아이디어를 공학적으로 <br />나타낼
-            수 있다. 또한 비즈쿨과 각종 창업 대회 등 다양한 창업 대회들을 참가하여 역량을 늘릴 수 있으며, <br />자신의
+            캡칭플랜츠와 스마트 화분과 같은 공학 및 인공지능 분야의 융합이 이루어져 구상한 아이디어를 공학적으로 나타낼
+            수 있다. 또한 비즈쿨과 각종 창업 대회 등 다양한 창업 대회들을 참가하여 역량을 늘릴 수 있으며, 자신의
             커리어를 풍부하게 채워갈 수 있는 동아리.<br /><br />ex) 수경제배기, 스마트 팜, 그린하우스 운영
           </div>
-          <img class="line-5-GE0XEQ" src="img/sw-line-5-DEEA97EA-7F88-4BB3-BB5C-B00E43150B73.png" />
+          <img class="line-5-GE0XEQ" src="img/hw-line-5-163EB952-B348-4685-B876-2175AD5EFA36.png" />
           <div class="x2021-g-slave-pro-j-zUixHA sd36">2021년도 G-Slave의 ProJ 계획</div>
           <div class="x-zUixHA sdmedium24">
             -이끼의 흡착능력을 활용한 중금속 정화 실험<br />-프리츠 하버의 하버법을 활용한 암모니아의 중화반응 실험<br />-기초화장품
@@ -334,6 +324,46 @@
               <div class="nalssam-PZ5l3E hw-little-fonts">공식 인스타 채널: @nalssam_sprout</div>
             </div>
           </div>
+        </div>
+        <div class="group-6-C61RwL">
+          <div class="stacked-group-PIEh7b">
+            <a href="sw.html"> <div class="sw-logo-6NpaO9"></div></a>
+            <img class="line-2-6NpaO9" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
+            <a href="bm.html"
+              ><img
+                class="x00002-6NpaO9"
+                src="img/bm-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900002-088264A5-6D42-44BE-9400-2521E0C0E192@2x.png"
+            /></a>
+            <img class="line-3-6NpaO9" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
+            <a href="hw.html"
+              ><img
+                class="x00001-6NpaO9"
+                src="img/hw-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900001-6BF45C9F-7F8D-4D98-BBE0-8224395F2912@2x.png"
+            /></a>
+            <img class="line-3-D4WyEx" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
+            <a href="bio.html"> <div class="g-slave-6NpaO9"></div></a>
+            <img class="line-3-VX9NFJ" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
+            <a href="a404.html"> <div class="cr-6NpaO9"></div></a>
+            <img class="line-3-e8LPZY" src="img/index-line-3-0ACD2E49-327D-4AE9-9D76-C17263651F94@2x.png" />
+            <a href="a404.html">
+              <div class="more00000-6NpaO9">
+                <a href="a404.html" onclick="window.event.stopPropagation()"
+                  ><img class="more00000-V9ZBCi" src="img/bio-more00000-775F189C-BA27-4692-8E0E-0CF1597B1523@2x.png"
+                /></a></div
+            ></a>
+          </div>
+        </div>
+        <div class="view-C61RwL">
+          <div class="navbar-UOcbxe">
+            <div class="hr-dIx87p"></div>
+            <a
+              href="https://docs.google.com/forms/d/e/1FAIpQLSeN4yuI6fxrqY3A1CYe7Y0yIaWwMlv7qVp9dXZnjb4Y6zYgxg/viewform?usp=sf_link"
+              target="_blank"
+            >
+              <div class="button-dIx87p"><div class="textlabel-63crYe ji1style">지원하기</div></div></a
+            >
+          </div>
+          <a href="index.html"><div class="nalssam-UOcbxe nalssamlogo">NALSSAM</div></a>
         </div>
       </div>
     </div>
