--- a/src/main/resources/templates/css/bio.css
+++ b/src/main/resources/templates/css/bio.css
@@ -1,10 +1,5 @@
 /* screen - bio */
 
-.-style {
-  font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
-  font-size: 199px;
-  letter-spacing: 0.00px;
-}
 .aboutnalssam {
   font-family: "AppleSDGothicNeo-Light", Helvetica, Arial, serif;
   font-size: 27px;
@@ -20,6 +15,11 @@
   font-size: 36px;
   letter-spacing: 0.00px;
 }
+.applesdgothicneo-normal-caribbean-green-18px {
+  color: var(--caribbean-green);
+  font-family: "AppleSDGothicNeo-Light", Helvetica, Arial, serif;
+  font-size: 18px;
+}
 .asd {
   font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
   font-size: 28px;
@@ -32,7 +32,7 @@
 }
 .bio {
   background-color: var(--white);
-  height: 4679px;
+  height: 4700px;
   overflow-x: hidden;
   position: relative;
   width: 1440px;
@@ -61,11 +61,12 @@
   color: var(--black);
   font-weight: 600;
   height: auto;
-  left: 380px;
-  line-height: 19px;
+  left: 317px;
+  line-height: 27px;
   position: absolute;
   text-align: center;
-  top: 1116px;
+  top: 1319px;
+  white-space: nowrap;
   width: auto;
 }
 .bio .bio-zUixHA {
@@ -77,16 +78,16 @@
   line-height: 29px;
   position: absolute;
   text-align: left;
-  top: 280px;
+  top: 291px;
   width: auto;
 }
-.bio .button-RyCdLg {
+.bio .button-KOsP6k {
   background-color: var(--caribbean-green);
-  height: 24px;
-  left: 196px;
+  height: 60px;
+  left: 220px;
   position: absolute;
-  top: 171px;
-  width: 75px;
+  top: 176px;
+  width: 218px;
 }
 .bio .button-dIx87p {
   background-color: var(--caribbean-green);
@@ -96,6 +97,28 @@
   top: 15px;
   width: 123px;
 }
+.bio .copy-zUixHA {
+  background-color: transparent;
+  color: var(--black);
+  font-weight: 700;
+  height: auto;
+  left: 11px;
+  line-height: 43px;
+  position: absolute;
+  text-align: left;
+  top: 233px;
+  white-space: nowrap;
+  width: auto;
+}
+.bio .cr-6NpaO9 {
+  background-color: transparent;
+  background-image: url(../img/bio-asdfasddfafafgasfasdfasdfasdf00007-88163F3D-8851-47B3-9CE3-B25F4E3B0CF8@2x.png);
+  background-size: 100% 100%;
+  height: 97px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 97px;
+}
 .bio .footer-fNGuiB {
   background-color: var(--eerie-black);
   height: 137px;
@@ -104,21 +127,17 @@
   top: 0px;
   width: 1440px;
 }
-.bio .g-slave-C61RwL {
+.bio .g-slave-6NpaO9 {
   background-color: transparent;
-  color: var(--black);
-  font-weight: 600;
-  height: auto;
-  left: 256px;
-  line-height: 19px;
-  position: absolute;
-  text-align: left;
-  top: 67px;
-  white-space: nowrap;
-  width: auto;
+  background-image: url(../img/bio-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900004-B93B4A11-6998-45C7-AB0F-5C29D33B21A8@2x.png);
+  background-size: 100% 100%;
+  height: 97px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 97px;
 }
 .bio .group-15-SHDHHB {
-  background: linear-gradient(180deg, #6DD400 0%, #F7B500 100%);
+  background: linear-gradient(-41deg, #D4005D 0%, #F7B500 84%);
   background-color: transparent;
   border-radius: 39px;
   height: 681px;
@@ -128,11 +147,35 @@
 }
 .bio .group-2-C61RwL {
   background-color: transparent;
-  height: 1430px;
-  left: 247px;
+  height: 1441px;
+  left: 246px;
   position: absolute;
-  top: 2186px;
+  top: 2265px;
   width: 947px;
+}
+.bio .group-3-KOsP6k {
+  background-color: transparent;
+  height: 176px;
+  left: 0px;
+  position: absolute;
+  top: 0px;
+  width: 635px;
+}
+.bio .group-4-C61RwL {
+  background-color: transparent;
+  height: 236px;
+  left: 390px;
+  position: absolute;
+  top: 309px;
+  width: 635px;
+}
+.bio .group-6-C61RwL {
+  background-color: var(--bunker);
+  height: 146px;
+  left: 0px;
+  position: absolute;
+  top: 53px;
+  width: 1442px;
 }
 .bio .group-i7hrr4 {
   background-color: transparent;
@@ -166,12 +209,47 @@
   top: 83px;
   width: 947px;
 }
+.bio .line-2-6NpaO9 {
+  background-color: transparent;
+  height: 72px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 1px;
+}
+.bio .line-3-6NpaO9 {
+  background-color: transparent;
+  height: 72px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 1px;
+}
+.bio .line-3-D4WyEx {
+  background-color: transparent;
+  height: 72px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 1px;
+}
+.bio .line-3-VX9NFJ {
+  background-color: transparent;
+  height: 72px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 1px;
+}
+.bio .line-3-e8LPZY {
+  background-color: transparent;
+  height: 72px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 1px;
+}
 .bio .line-5-GE0XEQ {
   background-color: transparent;
   height: 4px;
   left: 0px;
   position: absolute;
-  top: 1015px;
+  top: 1026px;
   width: 944px;
 }
 .bio .line-5-kTiyrb {
@@ -179,7 +257,7 @@
   height: 4px;
   left: 1px;
   position: absolute;
-  top: 430px;
+  top: 441px;
   width: 944px;
 }
 .bio .line-5-sdxwGy {
@@ -187,7 +265,7 @@
   height: 4px;
   left: 3px;
   position: absolute;
-  top: 705px;
+  top: 716px;
   width: 944px;
 }
 .bio .line-5-zUixHA {
@@ -195,8 +273,23 @@
   height: 4px;
   left: 0px;
   position: absolute;
-  top: 155px;
+  top: 166px;
   width: 944px;
+}
+.bio .more00000-6NpaO9 {
+  background-color: transparent;
+  height: 32px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 84px;
+}
+.bio .more00000-V9ZBCi {
+  background-color: transparent;
+  height: 32px;
+  left: 0px;
+  position: absolute;
+  top: 0px;
+  width: 84px;
 }
 .bio .nalssam-PZ5l3E {
   background-color: transparent;
@@ -221,6 +314,19 @@
   position: absolute;
   text-align: center;
   top: 18px;
+  white-space: nowrap;
+  width: auto;
+}
+.bio .nalssam-b-nFxIs7 {
+  background-color: transparent;
+  color: var(--black);
+  font-weight: 600;
+  height: auto;
+  left: 148px;
+  line-height: 29px;
+  position: absolute;
+  text-align: center;
+  top: 0px;
   white-space: nowrap;
   width: auto;
 }
@@ -266,21 +372,29 @@
   justify-content: flex-start;
   left: 0px;
   position: absolute;
-  top: 3781px;
+  top: 3802px;
   width: 1440px;
 }
-.bio .textlabel-3pqNxu {
+.bio .stacked-group-PIEh7b {
+  align-items: center;
   background-color: transparent;
-  color: var(--white);
-  font-weight: 800;
-  height: auto;
-  left: 6px;
-  line-height: 22px;
-  position: absolute;
-  text-align: center;
-  top: 1px;
-  white-space: nowrap;
-  width: 63px;
+  display: flex;
+  flex-direction: row;
+  height: 97px;
+  justify-content: flex-start;
+  left: 183px;
+  position: relative;
+  top: 23px;
+  width: auto;
+}
+.bio .sw-logo-6NpaO9 {
+  background-color: transparent;
+  background-image: url(../img/bio-swlogo-EE3530C2-879E-487F-8319-E698374DF302@2x.png);
+  background-size: 100% 100%;
+  height: 97px;
+  margin: 0;
+  position: relative;
+  width: 97px;
 }
 .bio .textlabel-63crYe {
   background-color: transparent;
@@ -317,8 +431,8 @@
   line-height: 29px;
   position: absolute;
   text-align: left;
-  top: 830px;
-  width: auto;
+  top: 841px;
+  width: 896px;
 }
 .bio .textlabel-GE0XEQ {
   background-color: transparent;
@@ -329,19 +443,7 @@
   line-height: 29px;
   position: absolute;
   text-align: left;
-  top: 555px;
-  width: auto;
-}
-.bio .textlabel-RyCdLg {
-  background-color: transparent;
-  color: var(--black);
-  font-weight: 800;
-  height: auto;
-  left: 53px;
-  line-height: 57px;
-  position: absolute;
-  text-align: center;
-  top: 43px;
+  top: 566px;
   width: auto;
 }
 .bio .textlabel-ZTOnhR {
@@ -353,7 +455,7 @@
   line-height: 43px;
   position: absolute;
   text-align: left;
-  top: 772px;
+  top: 783px;
   white-space: nowrap;
   width: auto;
 }
@@ -366,9 +468,34 @@
   line-height: 43px;
   position: absolute;
   text-align: left;
-  top: 497px;
+  top: 508px;
   white-space: nowrap;
   width: auto;
+}
+.bio .textlabel-m8aA7s {
+  background-color: transparent;
+  color: var(--white);
+  font-weight: 800;
+  height: auto;
+  left: 17px;
+  line-height: 22px;
+  position: absolute;
+  text-align: center;
+  top: 17px;
+  white-space: nowrap;
+  width: 184px;
+}
+.bio .textlabel-nFxIs7 {
+  background-color: transparent;
+  color: var(--black);
+  font-weight: 800;
+  height: auto;
+  left: 2px;
+  line-height: 72px;
+  position: absolute;
+  text-align: center;
+  top: 32px;
+  width: 630px;
 }
 .bio .textlabel-sdxwGy {
   background-color: transparent;
@@ -379,7 +506,7 @@
   line-height: 43px;
   position: absolute;
   text-align: left;
-  top: 222px;
+  top: 233px;
   white-space: nowrap;
   width: auto;
 }
@@ -388,21 +515,21 @@
   color: var(--black);
   font-weight: 800;
   height: auto;
-  left: 125px;
-  line-height: 57px;
+  left: 43px;
+  line-height: 72px;
   position: absolute;
   text-align: center;
   top: 0px;
   white-space: nowrap;
   width: auto;
 }
-.bio .top-word-C61RwL {
+.bio .top-word-2jslx4 {
   background-color: transparent;
-  height: 195px;
-  left: 486px;
-  position: absolute;
-  top: 185px;
-  width: 469px;
+  height: 176px;
+  left: 0px;
+  position: relative;
+  top: 0px;
+  width: 635px;
 }
 .bio .view-C61RwL {
   background-color: transparent;
@@ -436,19 +563,6 @@
   top: 57px;
   width: 1px;
 }
-.bio .x-RyCdLg {
-  background-color: transparent;
-  color: var(--black);
-  font-weight: 600;
-  height: auto;
-  left: -1px;
-  line-height: 29px;
-  position: absolute;
-  text-align: center;
-  top: 0px;
-  white-space: nowrap;
-  width: auto;
-}
 .bio .x-i7hrr4 {
   background-color: transparent;
   color: var(--sonic-silver);
@@ -471,8 +585,22 @@
   line-height: 29px;
   position: absolute;
   text-align: left;
-  top: 1140px;
+  top: 1151px;
   width: auto;
+}
+.bio .x00001-6NpaO9 {
+  background-color: transparent;
+  height: 97px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 97px;
+}
+.bio .x00002-6NpaO9 {
+  background-color: transparent;
+  height: 97px;
+  margin: 0 0 0 50px;
+  position: relative;
+  width: 97px;
 }
 .bio .x010-29-i7hrr4 {
   background-color: transparent;
@@ -515,20 +643,12 @@
 }
 .bio .x2-C61RwL {
   background-color: transparent;
-  height: 1px;
-  left: 249px;
-  position: absolute;
-  top: 99px;
-  width: 942px;
-}
-.bio .x2-VMr6Om {
-  background-color: transparent;
-  background-image: url(../img/bio-2-604AD754-BAEC-4DD4-B69C-C4F855375B49.png);
+  background-image: url(../img/bio-2-B80FED08-9960-4013-B0BC-2AD067F12B5F.png);
   background-size: 100% 100%;
   height: 736px;
-  left: 0px;
+  left: -1px;
   position: absolute;
-  top: 1285px;
+  top: 1433px;
   width: 1440px;
 }
 .bio .x2021-g-slave-pro-j-zUixHA {
@@ -540,7 +660,7 @@
   line-height: 43px;
   position: absolute;
   text-align: left;
-  top: 1082px;
+  top: 1093px;
   white-space: nowrap;
   width: auto;
 }
@@ -558,12 +678,12 @@
 }
 .bio .x3-C61RwL {
   background-color: transparent;
-  background-image: url(../img/bio-3-C9239852-EAE4-440A-938E-E71B77F4B98B.png);
+  background-image: url(../img/bio-3-00440E11-3712-4754-88EE-91DC655D90F7.png);
   background-size: 100% 100%;
   height: 595px;
   left: 0px;
   position: absolute;
-  top: 415px;
+  top: 647px;
   width: 1440px;
 }
 .facetimestyle {
@@ -583,17 +703,7 @@
 }
 .ji1style {
   font-family: "AppleSDGothicNeo-ExtraBold", Helvetica, Arial, serif;
-  font-size: 12px;
-}
-.littleabout {
-  font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
-  font-size: 15px;
-  letter-spacing: -0.92px;
-}
-.littlefonts {
-  font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
-  font-size: 16px;
-  letter-spacing: 0.00px;
+  font-size: 18px;
 }
 .more {
   font-family: "AppleSDGothicNeo-UltraLight", Helvetica, Arial, serif;
@@ -617,18 +727,17 @@
 }
 .nalssamlogoblack {
   font-family: "AppleSDGothicNeo-Heavy", Helvetica, Arial, serif;
-  font-size: 16px;
+  font-size: 21px;
   letter-spacing: 0.00px;
 }
-.sd12 {
-  font-family: "AppleSDGothicNeo-Medium", Helvetica, Arial, serif;
-  font-size: 12px;
-  letter-spacing: 0.00px;
+.newnew {
+  font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
+  font-size: 22px;
+  letter-spacing: -1.51px;
 }
-.sd13green {
-  font-family: "AppleSDGothicNeo-Light", Helvetica, Arial, serif;
-  font-size: 13px;
-  letter-spacing: -0.80px;
+.newstyle {
+  font-family: "AppleSDGothicNeo-ExtraBold", Helvetica, Arial, serif;
+  font-size: 24px;
 }
 .sd21green {
   font-family: "AppleSDGothicNeo-Light", Helvetica, Arial, serif;
@@ -670,11 +779,6 @@
   font-size: 48px;
   letter-spacing: 0.00px;
 }
-.sd60 {
-  font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
-  font-size: 60px;
-  letter-spacing: -3.48px;
-}
 .sdidontknow {
   font-family: "AppleSDGothicNeo-Bold", Helvetica, Arial, serif;
   font-size: 36px;
@@ -702,13 +806,13 @@
 }
 .sizes {
   font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
-  font-size: 16px;
-  letter-spacing: -1.10px;
+  font-size: 18px;
+  letter-spacing: -1.24px;
 }
 .thebig {
   font-family: "AppleSDGothicNeo-ExtraBold", Helvetica, Arial, serif;
-  font-size: 48px;
-  letter-spacing: -3.60px;
+  font-size: 60px;
+  letter-spacing: -4.50px;
 }
 .thebigwhite {
   font-family: "AppleSDGothicNeo-Heavy", Helvetica, Arial, serif;
@@ -720,13 +824,14 @@
   font-size: 36px;
   letter-spacing: 0.00px;
 }
-.thesilk {
-  font-family: "AppleSDGothicNeo-SemiBold", Helvetica, Arial, serif;
-  font-size: 24px;
-  letter-spacing: 0.00px;
+.with-nalssam {
+  font-family: "AppleSDGothicNeo-Heavy", Helvetica, Arial, serif;
+  font-size: 60px;
+  letter-spacing: -2.25px;
 }
 :root {
   --black: rgba(0,0,0,1.0);
+  --bunker: rgba(17,17,18,1.0);
   --caribbean-green: rgba(11,212,128,1.0);
   --cod-gray: rgba(10,10,10,1.0);
   --eerie-black: rgba(29,29,31,1.0);
