--- a/src/main/resources/templates/css/bio.css
+++ b/src/main/resources/templates/css/bio.css
@@ -84,18 +84,75 @@
 .bio .button-KOsP6k {
   background-color: var(--caribbean-green);
   height: 60px;
-  left: 220px;
+  left: 221px;
   position: absolute;
-  top: 176px;
+  top: 184px;
   width: 218px;
 }
-.bio .button-dIx87p {
-  background-color: var(--caribbean-green);
-  height: 24px;
-  left: 1067px;
+.bio .click-3qshht {
+  background-color: transparent;
+  color: var(--white);
+  font-weight: 200;
+  height: auto;
+  left: 609px;
+  line-height: 24px;
   position: absolute;
-  top: 15px;
-  width: 123px;
+  text-align: left;
+  top: 120px;
+  white-space: nowrap;
+  width: auto;
+}
+.bio .click-bAyQtV {
+  background-color: transparent;
+  color: var(--white);
+  font-weight: 200;
+  height: auto;
+  left: 213px;
+  line-height: 24px;
+  position: absolute;
+  text-align: left;
+  top: 120px;
+  white-space: nowrap;
+  width: auto;
+}
+.bio .click-hdKSmR {
+  background-color: transparent;
+  color: var(--white);
+  font-weight: 200;
+  height: auto;
+  left: 807px;
+  line-height: 24px;
+  position: absolute;
+  text-align: left;
+  top: 120px;
+  white-space: nowrap;
+  width: auto;
+}
+.bio .click-waRZGu {
+  background-color: transparent;
+  color: var(--white);
+  font-weight: 200;
+  height: auto;
+  left: 1005px;
+  line-height: 24px;
+  position: absolute;
+  text-align: left;
+  top: 120px;
+  white-space: nowrap;
+  width: auto;
+}
+.bio .click-zLZUBK {
+  background-color: transparent;
+  color: var(--white);
+  font-weight: 200;
+  height: auto;
+  left: 411px;
+  line-height: 24px;
+  position: absolute;
+  text-align: left;
+  top: 120px;
+  white-space: nowrap;
+  width: auto;
 }
 .bio .copy-zUixHA {
   background-color: transparent;
@@ -110,9 +167,9 @@
   white-space: nowrap;
   width: auto;
 }
-.bio .cr-6NpaO9 {
+.bio .cr-xd0wTK {
   background-color: transparent;
-  background-image: url(../img/bio-asdfasddfafafgasfasdfasdfasdf00007-88163F3D-8851-47B3-9CE3-B25F4E3B0CF8@2x.png);
+  background-image: url(../img/bm-asdfasddfafafgasfasdfasdfasdf00007-FF9BC485-D87B-4D39-B8E2-6D653FA4CFCC@2x.png);
   background-size: 100% 100%;
   height: 97px;
   margin: 0 0 0 50px;
@@ -127,14 +184,22 @@
   top: 0px;
   width: 1440px;
 }
-.bio .g-slave-6NpaO9 {
+.bio .g-slave-xd0wTK {
   background-color: transparent;
-  background-image: url(../img/bio-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900004-B93B4A11-6998-45C7-AB0F-5C29D33B21A8@2x.png);
+  background-image: url(../img/sw-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900004-0F0282D7-032D-4CC7-B765-74579D72A2AE@2x.png);
   background-size: 100% 100%;
   height: 97px;
   margin: 0 0 0 50px;
   position: relative;
   width: 97px;
+}
+.bio .group-11-C61RwL {
+  background-color: transparent;
+  height: 146px;
+  left: 0px;
+  position: absolute;
+  top: 50px;
+  width: 1442px;
 }
 .bio .group-15-SHDHHB {
   background: linear-gradient(-41deg, #D4005D 0%, #F7B500 84%);
@@ -163,18 +228,18 @@
 }
 .bio .group-4-C61RwL {
   background-color: transparent;
-  height: 236px;
+  height: 244px;
   left: 390px;
   position: absolute;
   top: 309px;
   width: 635px;
 }
-.bio .group-6-C61RwL {
+.bio .group-6-bAyQtV {
   background-color: var(--bunker);
   height: 146px;
   left: 0px;
   position: absolute;
-  top: 53px;
+  top: 0px;
   width: 1442px;
 }
 .bio .group-i7hrr4 {
@@ -197,7 +262,7 @@
   background-color: var(--mine-shaft);
   height: 1px;
   left: 0px;
-  position: absolute;
+  position: relative;
   top: 52px;
   width: 1440px;
 }
@@ -209,35 +274,35 @@
   top: 83px;
   width: 947px;
 }
-.bio .line-2-6NpaO9 {
+.bio .line-2-xd0wTK {
   background-color: transparent;
   height: 72px;
   margin: 0 0 0 50px;
   position: relative;
   width: 1px;
 }
-.bio .line-3-6NpaO9 {
+.bio .line-3-HrtGqK {
   background-color: transparent;
   height: 72px;
   margin: 0 0 0 50px;
   position: relative;
   width: 1px;
 }
-.bio .line-3-D4WyEx {
+.bio .line-3-Hxo22Q {
   background-color: transparent;
   height: 72px;
   margin: 0 0 0 50px;
   position: relative;
   width: 1px;
 }
-.bio .line-3-VX9NFJ {
+.bio .line-3-xLcPb5 {
   background-color: transparent;
   height: 72px;
   margin: 0 0 0 50px;
   position: relative;
   width: 1px;
 }
-.bio .line-3-e8LPZY {
+.bio .line-3-xd0wTK {
   background-color: transparent;
   height: 72px;
   margin: 0 0 0 50px;
@@ -276,19 +341,19 @@
   top: 166px;
   width: 944px;
 }
-.bio .more00000-6NpaO9 {
-  background-color: transparent;
-  height: 32px;
-  margin: 0 0 0 50px;
-  position: relative;
-  width: 84px;
-}
-.bio .more00000-V9ZBCi {
+.bio .more00000-TVJ55C {
   background-color: transparent;
   height: 32px;
   left: 0px;
   position: absolute;
   top: 0px;
+  width: 84px;
+}
+.bio .more00000-xd0wTK {
+  background-color: transparent;
+  height: 32px;
+  margin: 0 0 0 50px;
+  position: relative;
   width: 84px;
 }
 .bio .nalssam-PZ5l3E {
@@ -375,7 +440,7 @@
   top: 3802px;
   width: 1440px;
 }
-.bio .stacked-group-PIEh7b {
+.bio .stacked-group-W8YgeY {
   align-items: center;
   background-color: transparent;
   display: flex;
@@ -387,27 +452,14 @@
   top: 23px;
   width: auto;
 }
-.bio .sw-logo-6NpaO9 {
+.bio .sw-logo-xd0wTK {
   background-color: transparent;
-  background-image: url(../img/bio-swlogo-EE3530C2-879E-487F-8319-E698374DF302@2x.png);
+  background-image: url(../img/sw-swlogo-CDA1FCD5-FC09-4C68-B38C-EFADE8323762@2x.png);
   background-size: 100% 100%;
   height: 97px;
   margin: 0;
   position: relative;
   width: 97px;
-}
-.bio .textlabel-63crYe {
-  background-color: transparent;
-  color: var(--white);
-  font-weight: 800;
-  height: auto;
-  left: 10px;
-  line-height: 22px;
-  position: absolute;
-  text-align: center;
-  top: 1px;
-  white-space: nowrap;
-  width: 103px;
 }
 .bio .textlabel-D44yGU {
   background-color: transparent;
@@ -588,14 +640,14 @@
   top: 1151px;
   width: auto;
 }
-.bio .x00001-6NpaO9 {
+.bio .x00001-xd0wTK {
   background-color: transparent;
   height: 97px;
   margin: 0 0 0 50px;
   position: relative;
   width: 97px;
 }
-.bio .x00002-6NpaO9 {
+.bio .x00002-xd0wTK {
   background-color: transparent;
   height: 97px;
   margin: 0 0 0 50px;
@@ -643,7 +695,7 @@
 }
 .bio .x2-C61RwL {
   background-color: transparent;
-  background-image: url(../img/bio-2-B80FED08-9960-4013-B0BC-2AD067F12B5F.png);
+  background-image: url(../img/bio-2-ABF3A5D7-2769-43B1-A996-7D5D302640C0.png);
   background-size: 100% 100%;
   height: 736px;
   left: -1px;
@@ -678,7 +730,7 @@
 }
 .bio .x3-C61RwL {
   background-color: transparent;
-  background-image: url(../img/bio-3-00440E11-3712-4754-88EE-91DC655D90F7.png);
+  background-image: url(../img/bio-3-C44940B1-ED6A-4DE8-92A1-303BE96799C2.png);
   background-size: 100% 100%;
   height: 595px;
   left: 0px;
@@ -700,10 +752,6 @@
   font-family: "AppleSDGothicNeo-Regular", Helvetica, Arial, serif;
   font-size: 12px;
   letter-spacing: -0.12px;
-}
-.ji1style {
-  font-family: "AppleSDGothicNeo-ExtraBold", Helvetica, Arial, serif;
-  font-size: 18px;
 }
 .more {
   font-family: "AppleSDGothicNeo-UltraLight", Helvetica, Arial, serif;
