--- a/src/main/resources/templates/bio.html
+++ b/src/main/resources/templates/bio.html
@@ -232,7 +232,6 @@
         cursor: pointer;
       }
     </style>
-    <meta name="author" content="AnimaApp.com - Design to code, Automated." />
   </head>
   <body style="margin: 0; background: rgba(255, 255, 255, 1)">
     <script>
@@ -273,9 +272,9 @@
         <div class="x2-C61RwL"></div>
         <div class="group-2-C61RwL">
           <div class="textlabel-zUixHA thebig">본인에게 맞는 세부 역량을 찾아보세요.</div>
-          <img class="line-5-zUixHA" src="img/bm-line-5-CD4A7D9A-ADF8-4149-8F83-6F1E7E360A48.png" />
-          <img class="line-5-sdxwGy" src="img/bm-line-5-CD4A7D9A-ADF8-4149-8F83-6F1E7E360A48.png" />
-          <img class="line-5-kTiyrb" src="img/bm-line-5-CD4A7D9A-ADF8-4149-8F83-6F1E7E360A48.png" />
+          <img class="line-5-zUixHA" src="img/hw-line-5-F718C294-6F14-4159-BC46-B887DC6966A9.png" />
+          <img class="line-5-sdxwGy" src="img/hw-line-5-F718C294-6F14-4159-BC46-B887DC6966A9.png" />
+          <img class="line-5-kTiyrb" src="img/hw-line-5-F718C294-6F14-4159-BC46-B887DC6966A9.png" />
           <div class="textlabel-sdxwGy sd36">설계한 실험을 현실로 만드는 곳</div>
           <div class="copy-zUixHA sd36">설계한 실험을 현실로 만드는 곳</div>
           <div class="bio-zUixHA sdmedium24">
@@ -295,7 +294,7 @@
             수 있다. 또한 비즈쿨과 각종 창업 대회 등 다양한 창업 대회들을 참가하여 역량을 늘릴 수 있으며, 자신의
             커리어를 풍부하게 채워갈 수 있는 동아리.<br /><br />ex) 수경제배기, 스마트 팜, 그린하우스 운영
           </div>
-          <img class="line-5-GE0XEQ" src="img/bm-line-5-CD4A7D9A-ADF8-4149-8F83-6F1E7E360A48.png" />
+          <img class="line-5-GE0XEQ" src="img/hw-line-5-F718C294-6F14-4159-BC46-B887DC6966A9.png" />
           <div class="x2021-g-slave-pro-j-zUixHA sd36">2021년도 G-Slave의 ProJ 계획</div>
           <div class="x-zUixHA sdmedium24">
             -이끼의 흡착능력을 활용한 중금속 정화 실험<br />-프리츠 하버의 하버법을 활용한 암모니아의 중화반응 실험<br />-기초화장품
@@ -344,29 +343,29 @@
           <div class="navbar-UOcbxe">
             <div class="hr-dIx87p"></div>
           </div>
-          <a href="index.html"><div class="nalssam-UOcbxe nalssamlogo">NALSSAM</div></a>
+          <a href="index.html"><div class="nalssam-UOcbxe applesdgothicneo-heavy-normal-white-24px">NALSSAM</div></a>
         </div>
         <div class="group-11-C61RwL">
           <div class="group-6-bAyQtV">
             <div class="stacked-group-W8YgeY">
               <a href="sw.html"> <div class="sw-logo-xd0wTK"></div></a>
-              <img class="line-2-xd0wTK" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
-              <a href="bm.html"
-                ><img
-                  class="x00002-xd0wTK"
-                  src="img/sw-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900002-C8BAD57E-9D4B-4694-AE23-AA289E64697F@2x.png"
-              /></a>
-              <img class="line-3-xd0wTK" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
+              <img class="line-2-xd0wTK" src="img/bio-line-3-2D1662E4-DF3F-4A2B-B53E-DFFED1828782@2x.png" />
               <a href="hw.html"
                 ><img
                   class="x00001-xd0wTK"
-                  src="img/bm-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900001-DC64220C-B753-410C-9435-79B8A2BC751F@2x.png"
+                  src="img/bm-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900001-5308C10B-85FD-4A3B-9076-AA7B86533778@2x.png"
               /></a>
-              <img class="line-3-Hxo22Q" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
+              <img class="line-3-xd0wTK" src="img/bio-line-3-2D1662E4-DF3F-4A2B-B53E-DFFED1828782@2x.png" />
+              <a href="bm.html"
+                ><img
+                  class="x00002-xd0wTK"
+                  src="img/bio-u110eu116cu110cu1169u11bc-u1105u1169u1100u116900002-63FBB258-B539-4E3A-BC46-2F5BE853528D@2x.png"
+              /></a>
+              <img class="line-3-Hxo22Q" src="img/bio-line-3-2D1662E4-DF3F-4A2B-B53E-DFFED1828782@2x.png" />
               <a href="bio.html"> <div class="g-slave-xd0wTK"></div></a>
-              <img class="line-3-HrtGqK" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
+              <img class="line-3-HrtGqK" src="img/bio-line-3-2D1662E4-DF3F-4A2B-B53E-DFFED1828782@2x.png" />
               <a href="a404.html"> <div class="cr-xd0wTK"></div></a>
-              <img class="line-3-xLcPb5" src="img/bm-line-3-0CB98E8B-7DD7-4CA7-A98E-654C9096F029@2x.png" />
+              <img class="line-3-xLcPb5" src="img/bio-line-3-2D1662E4-DF3F-4A2B-B53E-DFFED1828782@2x.png" />
               <a href="a404.html">
                 <div class="more00000-xd0wTK">
                   <a href="a404.html" onclick="window.event.stopPropagation()"
